# gcp-prod-deployment

./: .env.example  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml
.github/act/: env.example  secrets  secrets.example
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  infra.yml  release.yml
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/alembic/versions/: 2026-01-08-00-00_2f4b9c1d7a3e.py
backend/app/app/: main.py
backend/app/app/api/: deps.py
backend/app/app/api/v1/: api.py
backend/app/app/api/v1/endpoints/: cache.py  chat.py  hero.py  login.py  natural_language.py  pubsub.py  user.py  weather.py
backend/app/app/core/: authz.py  config.py  security.py
backend/app/app/crud/: __init__.py  chat_message_crud.py  chat_session_crud.py
backend/app/app/db/: init_db.py  session.py
backend/app/app/models/: __init__.py  chat_message_model.py  chat_session_model.py  media_model.py
backend/app/app/schemas/: chat_schema.py  common_schema.py  user_schema.py
backend/app/app/utils/: gcs_client.py  llm_client.py  local_storage_client.py  storage_client_factory.py
backend/app/test/api/: test_login.py  test_user.py
caddy/: Caddyfile
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  server.js  tailwind.config.cjs  tsconfig.json
frontend/public/images/: README.md
frontend/src/: App.jsx  index.css
infra/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/envs/dev/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/envs/prod/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/globals/: variables_global.tf  versions.tf
infra/terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloud_run_load_balancer/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloud_run_services/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam_secret_access/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/pubsub_scheduler/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/redis_memorystore/: main.tf  variables.tf
infra/terraform/modules/sql_postgres/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/storage_gcs/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vertex_ai/: main.tf  outputs.tf  variables.tf
skills/terraform-gcp/: SKILL.md
skills/terraform-gcp/references/: gcp-terraform-best-practices.md
