[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "jonra1993", email = "jon_ra@hotmail.es" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "fastapi[all]>=0.110.0,<0.111.0",
    "sqlmodel==0.0.16",
    "cryptography>=41.0.7,<42.0.0",
    "bcrypt>=4.1.1,<5.0.0",
    "SQLAlchemy-Utils>=0.41.1,<0.42.0",
    "SQLAlchemy>=2.0.23,<3.0.0",
    "fastapi-pagination[sqlalchemy]>=0.12.21,<0.13.0",
    "fastapi-cache2>=0.2.1,<0.3.0",
    "Pillow>=10.1.0,<11.0.0",
    "watchfiles>=0.21.0,<0.22.0",
    "asyncer==0.0.5",
    "httpx>=0.25.2,<0.26.0",
    "pandas>=2.1.4,<3.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "redis>=4.5.1,<5.0.0",
    "fastapi-async-sqlalchemy>=0.6.0,<0.7.0",
    "oso>=0.27.0,<0.28.0",
    "psycopg2-binary>=2.9.5,<3.0.0",
    "transformers>=4.35.2,<5.0.0",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp311-cp311-win_amd64.whl ; sys_platform == 'win32'",
    "requests>=2.31.0,<3.0.0",
    "wheel>=0.42.0,<0.43.0",
    "setuptools>=69.0.2,<70.0.0",
    "langchain>=0.0.348,<0.1.0",
    "openai>=1.3.8,<2.0.0",
    "fastapi-limiter>=0.1.5,<0.2.0",
    "pyjwt[crypto]>=2.8.0,<3.0.0",
    "google-cloud-storage>=2.14.0,<3.0.0",
    "google-cloud-aiplatform>=1.38.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0,<24.0.0",
    "ruff>=0.0.256,<0.1.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.1,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "mypy>=1.5.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic", "__pycache__"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
